welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:4: error: not found: value avancer
avancer()
^Source:5: error: not found: value avancer
avancer()
^Source:6: error: not found: value avancer
avancer()
^