welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
baisseBrosse()
gauche()
avancer()
avancer()
avancer()
